theme parent should use colon syntax

--- a/src/mixins/_hu-parent-responsive.scss
+++ b/src/mixins/_hu-parent-responsive.scss
@@ -2,7 +2,7 @@
   @if index($modules, responsive) {
     @each $parent in $parents {
       $escaped-parent: hu-escape-class-name($parent);
-      $escaped-child: if($child-string-to-strip, hu-string-replace($escaped-parent, $child-string-to-strip, ""), $escaped-parent);
+      $escaped-child: if($child-string-to-strip, hu-escape-class-name(hu-string-replace($parent, $child-string-to-strip, "")), $escaped-parent);
 
       @if (index($modules, base)) {
         .#{$escaped-parent} .#{$escaped-child}__#{hu-escape-class-name("@mq-#{$mq-scale}")}--#{$class-name} {
