--- a/src/mixins/_hu-theme.scss
+++ b/src/mixins/_hu-theme.scss
@@ -1,5 +1,5 @@
 @mixin hu-theme($class-name, $theme, $modules) {
-  @include hu-parent($class-name, theme-#{$theme}, $modules, "-" + $theme) {
+  @include hu-parent($class-name, "theme:#{$theme}", $modules, ":#{$theme}") {
     @content;
   }
 }
