reset: inputs inherit font-weight

--- a/src/reset/_index.scss
+++ b/src/reset/_index.scss
@@ -160,6 +160,7 @@
     color: inherit #{hu-important()};
     font-family: inherit #{hu-important()};
     font-size: 1em #{hu-important()};
+    font-weight: inherit #{hu-important()};
   }
 
   [disabled],
