--- a/src/variables/classes/_index.scss
+++ b/src/variables/classes/_index.scss
@@ -30,6 +30,7 @@
 @import "hu-cursor";
 @import "hu-display";
 @import "hu-flex";
+@import "hu-flex-basis";
 @import "hu-flex-direction";
 @import "hu-flex-flow";
 @import "hu-flex-grow";
