--- a/src/variables/global/_hu-escape-class-name-types.scss
+++ b/src/variables/global/_hu-escape-class-name-types.scss
@@ -1,8 +1,9 @@
 // See https://mathiasbynens.be/notes/css-escapes
-// Use a custom Purgecss extractor: /(?:[A-Za-z0-9]|-|_|:|<|>|@)+/g
+// Use a custom Purgecss extractor: /[A-Za-z0-9-_&:@<>]+/g
 $hu-escape-class-name-types: (
   ":",
+  "&",
+  "@",
   "<",
   ">",
-  "@",
 ) !default;
