--- a/src/mixins/_hu-generic.scss
+++ b/src/mixins/_hu-generic.scss
@@ -9,20 +9,20 @@
     }
 
     @else if ($module == focus) {
-      #{$hu-focus-parent} .#{hu-escape-class-name(":focus")}--#{$class-name}#{$hu-focus-pseudo} {
+      #{$hu-focus-parent} .#{hu-escape-class-name("&:focus")}--#{$class-name}#{$hu-focus-pseudo} {
         @content;
       }
     }
 
     @else if ($module == hover) {
-      .#{hu-escape-class-name(":hover")}--#{$class-name}:hover {
+      .#{hu-escape-class-name("&:hover")}--#{$class-name}:hover {
         @content;
       }
     }
 
     @else if ($module == hocus) {
-      #{$hu-focus-parent} .#{hu-escape-class-name(":hocus")}--#{$class-name}#{$hu-focus-pseudo},
-      .#{hu-escape-class-name(":hocus")}--#{$class-name}:hover {
+      #{$hu-focus-parent} .#{hu-escape-class-name("&:hocus")}--#{$class-name}#{$hu-focus-pseudo},
+      .#{hu-escape-class-name("&:hocus")}--#{$class-name}:hover {
         @content;
       }
     }
