--- a/src/mixins/_hu-parent-classes.scss
+++ b/src/mixins/_hu-parent-classes.scss
@@ -1,9 +1,11 @@
 @mixin hu-parent-classes($property, $parents, $modules, $types: null, $child-string-to-strip: null) {
-  @include hu-parent-generic-classes($property, $parents, $modules, $types, $child-string-to-strip) {
+  $core-modules: hu-get-class-modules($modules, core, $modules);
+  
+  @include hu-parent-generic-classes($property, $parents, $core-modules, $types, $child-string-to-strip) {
     @content;
   }
 
-  @include hu-parent-responsive-classes($property, $parents, $modules, $types, $child-string-to-strip) {
+  @include hu-parent-responsive-classes($property, $parents, $core-modules, $types, $child-string-to-strip) {
     @content;
   }
 }
