--- a/src/variables/classes/_index.scss
+++ b/src/variables/classes/_index.scss
@@ -27,6 +27,7 @@
 @import "hu-box-sizing";
 @import "hu-color";
 @import "hu-columns";
+@import "hu-content";
 @import "hu-cursor";
 @import "hu-display";
 @import "hu-flex";
