--- a/src/classes/_hu-bg-repeat.scss
+++ b/src/classes/_hu-bg-repeat.scss
@@ -1,2 +1,2 @@
 // bg-repeat -> background-repeat
-@include hu-classes((bg: background-repeat), $hu-bg-repeat-modules, $hu-bg-repeat-types);
+@include hu-classes((bg-repeat: background-repeat), $hu-bg-repeat-modules, $hu-bg-repeat-types);
