generic, non-typed classes should respect hu-important()

--- a/src/classes/_hu-font-smoothing.scss
+++ b/src/classes/_hu-font-smoothing.scss
@@ -1,4 +1,4 @@
 @include hu-classes(font-smoothing, $hu-font-smoothing-modules) {
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale #{hu-important()};
+  -webkit-font-smoothing: antialiased #{hu-important()};
 }
