--- a/src/mixins/_hu-pseudo-generic-classes.scss
+++ b/src/mixins/_hu-pseudo-generic-classes.scss
@@ -7,6 +7,7 @@
   @each $module in hu-format-modules($modules) {
     @if ($types) {
       @each $type, $value in $types {
+        $type: "#{$type}";
         $class-name: hu-class-name("#{$class-name-property}#{if(str-length($type) > 0, ":#{$type}", "")}");
         $value: if($value, $value, $type);
 
