--- a/src/classes/_hu-theme-color.scss
+++ b/src/classes/_hu-theme-color.scss
@@ -1,27 +1,24 @@
-$hu-theme-color-property-name: color;
-$hu-theme-color-class-name: hu-get-class-name(($hu-theme-color-alias: $hu-theme-color-property-name));
-
-@each $module in hu-format-modules($hu-theme-color-modules) {
+@each $module in hu-format-modules($hu-color-modules) {
   @each $theme, $keys in $hu-themes {
     @each $key, $value in $keys {
-      $class-name: hu-class-name("#{$hu-theme-color-class-name}:#{$key}");
+      $class-name: hu-class-name("#{$hu-color-class-name}:#{$key}");
 
       @include hu-theme($class-name, $theme, $module) {
-        #{$hu-theme-color-property-name}: $value #{hu-important()};
+        #{$hu-color-property-name}: $value #{hu-important()};
       }
     }
   }
 }
 
-@if (index($hu-theme-color-modules, responsive)) {
+@if (index($hu-color-modules, responsive)) {
   @each $mq-scale, $mq-value in $hu-media-queries {
     @include hu-media-query($mq-value) {
       @each $theme, $keys in $hu-themes {
         @each $key, $value in $keys {
-          $class-name: hu-class-name("#{$hu-theme-color-class-name}:#{$key}");
+          $class-name: hu-class-name("#{$hu-color-class-name}:#{$key}");
 
-          @include hu-theme-responsive($class-name, $theme, $hu-theme-color-modules, $mq-scale) {
-            #{$hu-theme-color-property-name}: $value #{hu-important()};
+          @include hu-theme-responsive($class-name, $theme, $hu-color-modules, $mq-scale) {
+            #{$hu-color-property-name}: $value #{hu-important()};
           }
         }
       }
