--- a/src/variables/classes/_hu-grid-row-gap.scss
+++ b/src/variables/classes/_hu-grid-row-gap.scss
@@ -2,4 +2,4 @@ $hu-grid-row-gap-alias: "" !default;
 
 $hu-grid-row-gap-modules: () !default;
 
-$hu-grid-row-gap-types: () !default;
+$hu-grid-row-gap-types: $hu-spacing-scale !default;
