revamp and improve default color palette

--- a/src/variables/global/_hu-colors.scss
+++ b/src/variables/global/_hu-colors.scss
@@ -10,99 +10,99 @@ $hu-colors-keywords: (
 $hu-colors: hu-append((
   "neutral": (
     0: #ffffff,
-    100: #e0e0e0,
-    200: #c9c9c9,
-    300: #aaaaaa,
-    400: #999999,
-    500: #898989,
-    600: #7d7d7d,
-    700: #696969,
-    800: #434343,
-    900: #252525,
-    1000: #1a1a1a,
+    100: #d5d5d5,
+    200: #c0c0c0,
+    300: #acacac,
+    400: #989898,
+    500: #858585,
+    600: #737373,
+    700: #595959,
+    800: #414141,
+    900: #2b2b2b,
+    1000: #161616,
   ),
   "red": (
-    100: #f9ecea,
-    200: #f2c7c5,
-    300: #ea9e9c,
-    400: #e16d68,
-    500: #d9524b,
-    600: #d14139,
-    700: #c4372e,
-    800: #a92d25,
-    900: #67211c,
-    1000: #361110,
+    100: #f5d6d2,
+    200: #f1aca3,
+    300: #eb857a,
+    400: #e56156,
+    500: #de3f35,
+    600: #ce2922,
+    700: #a2221d,
+    800: #7b1b18,
+    900: #541513,
+    1000: #2f0f0f,
   ),
   "orange": (
-    100: #faefea,
-    200: #f4d5c6,
-    300: #eeb89e,
-    400: #e4916b,
-    500: #dc7d51,
-    600: #d46c3e,
-    700: #c76034,
-    800: #ab502a,
-    900: #6a371f,
-    1000: #371d11,
+    100: #f5e0d2,
+    200: #f1c2a3,
+    300: #eba57a,
+    400: #e58a56,
+    500: #de7035,
+    600: #ce5a22,
+    700: #a2481d,
+    800: #7b3718,
+    900: #542813,
+    1000: #2f180f,
   ),
   "yellow": (
-    100: #fcfcec,
-    200: #faf8ca,
-    300: #f7f2a4,
-    400: #f0ea78,
-    500: #e9e262,
-    600: #e3dc56,
-    700: #d4ce4c,
-    800: #b7b13f,
-    900: #706d29,
-    1000: #3b3a16,
+    100: #f0eabf,
+    200: #ece093,
+    300: #e6d36d,
+    400: #dfc64b,
+    500: #d8b82d,
+    600: #bf9f24,
+    700: #977e1e,
+    800: #725f19,
+    900: #4e4113,
+    1000: #2c250f,
   ),
   "green": (
-    100: #edfbf4,
-    200: #cff8df,
-    300: #aff4c9,
-    400: #8bedab,
-    500: #7ae69a,
-    600: #6fdf8d,
-    700: #66d280,
-    800: #56b56c,
-    900: #356e46,
-    1000: #1c3a25,
+    100: #bff0d4,
+    200: #93ecb8,
+    300: #6de69e,
+    400: #4bdf85,
+    500: #2dd86c,
+    600: #24bf5a,
+    700: #1e9748,
+    800: #197237,
+    900: #134e27,
+    1000: #0f2c18,
   ),
   "blue": (
-    100: #ebf6fb,
-    200: #ccebf8,
-    300: #a8ddf4,
-    400: #7dc9ed,
-    500: #67bbe5,
-    600: #59b0de,
-    700: #4fa3d1,
-    800: #428cb4,
-    900: #2a556e,
-    1000: #172e3a,
+    100: #bfd8f0,
+    200: #93c0ec,
+    300: #6dade6,
+    400: #4b9bdf,
+    500: #2d8dd8,
+    600: #247fbf,
+    700: #1e6497,
+    800: #194d72,
+    900: #13364e,
+    1000: #0f212c,
   ),
   "indigo": (
-    100: #ede9fa,
-    200: #ccc5f6,
-    300: #a79bf1,
-    400: #7968e9,
-    500: #5e4be1,
-    600: #4a38da,
-    700: #3d2dcd,
-    800: #3224b1,
-    900: #251a6b,
-    1000: #141039,
+    100: #cfbff0,
+    200: #af93ec,
+    300: #906de6,
+    400: #754bdf,
+    500: #5a2dd8,
+    600: #4924bf,
+    700: #3b1e97,
+    800: #2e1972,
+    900: #21134e,
+    1000: #140f2c,
   ),
   "violet": (
-    100: #f8eafb,
-    200: #eec7f7,
-    300: #e39ff2,
-    400: #d46eea,
-    500: #cb54e3,
-    600: #c345dc,
-    700: #b73bcf,
-    800: #9d30b2,
-    900: #61216c,
-    1000: #321239,
+    100: #f0bfe8,
+    200: #ec93de,
+    300: #e66dd5,
+    400: #df4bcd,
+    500: #d82dc7,
+    600: #bf24b3,
+    700: #971e8d,
+    800: #72196b,
+    900: #4e134a,
+    1000: #2c0f2b,
   ),
 ), $hu-colors-keywords) !default;
