added in 0 scale palette colors and updated docs

--- a/src/variables/global/_hu-colors.scss
+++ b/src/variables/global/_hu-colors.scss
@@ -22,6 +22,7 @@ $hu-colors: hu-append((
     1000: #161616,
   ),
   "red": (
+    0: #fae9e8,
     100: #f5d6d2,
     200: #f1aca3,
     300: #eb857a,
@@ -34,6 +35,7 @@ $hu-colors: hu-append((
     1000: #2f0f0f,
   ),
   "orange": (
+    0: #faebe8,
     100: #f5e0d2,
     200: #f1c2a3,
     300: #eba57a,
@@ -46,6 +48,7 @@ $hu-colors: hu-append((
     1000: #2f180f,
   ),
   "yellow": (
+    0: #f7f3de,
     100: #f0eabf,
     200: #ece093,
     300: #e6d36d,
@@ -58,6 +61,7 @@ $hu-colors: hu-append((
     1000: #2c250f,
   ),
   "green": (
+    0: #def7e9,
     100: #bff0d4,
     200: #93ecb8,
     300: #6de69e,
@@ -70,6 +74,7 @@ $hu-colors: hu-append((
     1000: #0f2c18,
   ),
   "blue": (
+    0: #deebf7,
     100: #bfd8f0,
     200: #93c0ec,
     300: #6dade6,
@@ -82,6 +87,7 @@ $hu-colors: hu-append((
     1000: #0f212c,
   ),
   "indigo": (
+    0: #e5def7,
     100: #cfbff0,
     200: #af93ec,
     300: #906de6,
@@ -94,6 +100,7 @@ $hu-colors: hu-append((
     1000: #140f2c,
   ),
   "violet": (
+    0: #f7def3,
     100: #f0bfe8,
     200: #ec93de,
     300: #e66dd5,
