add responsive to a few modules by default

--- a/src/variables/classes/_hu-height.scss
+++ b/src/variables/classes/_hu-height.scss
@@ -1,6 +1,6 @@
 $hu-height-alias: "" !default;
 
-$hu-height-modules: (base, print) !default;
+$hu-height-modules: (base, print, responsive) !default;
 
 $hu-height-types: (
   0: 0,
