--- a/src/variables/classes/_hu-letter-spacing.scss
+++ b/src/variables/classes/_hu-letter-spacing.scss
@@ -1,6 +1,6 @@
 $hu-letter-spacing-alias: "" !default;
 
-$hu-letter-spacing-modules: (base) !default;
+$hu-letter-spacing-modules: (base, responsive) !default;
 
 $hu-letter-spacing-types: (
   -200: -0.2em,
