--- a/src/variables/classes/_hu-max-width.scss
+++ b/src/variables/classes/_hu-max-width.scss
@@ -1,6 +1,6 @@
 $hu-max-width-alias: "" !default;
 
-$hu-max-width-modules: (base) !default;
+$hu-max-width-modules: (base, responsive) !default;
 
 $hu-max-width-types: (
   100: 100%,
