--- a/src/variables/classes/_hu-min-width.scss
+++ b/src/variables/classes/_hu-min-width.scss
@@ -1,6 +1,6 @@
 $hu-min-width-alias: "" !default;
 
-$hu-min-width-modules: (base) !default;
+$hu-min-width-modules: (base, responsive) !default;
 
 $hu-min-width-types: (
   0: 0,
