Fix the pseudo property from b1aa762

--- a/src/mixins/_hu-pseudo-generic-classes.scss
+++ b/src/mixins/_hu-pseudo-generic-classes.scss
@@ -7,8 +7,7 @@
   @each $module in hu-format-modules($modules) {
     @if ($types) {
       @each $type, $value in $types {
-        $type: "#{$type}";
-        $class-name: hu-class-name("#{$class-name-property}#{if(str-length($type) > 0, ":#{$type}", "")}");
+        $class-name: hu-class-name("#{$class-name-property}#{if(str-length("#{$type}") > 0, ":#{$type}", "")}");
         $value: if($value, $value, $type);
 
         @include hu-pseudo($class-name, $pseudos, $module) {
