--- a/src/mixins/_hu-pseudo-responsive-classes.scss
+++ b/src/mixins/_hu-pseudo-responsive-classes.scss
@@ -9,8 +9,7 @@
       @include hu-media-query($mq-value) {
         @if ($types) {
           @each $type, $value in $types {
-            $type: "#{$type}";
-            $class-name: hu-class-name("#{$class-name-property}#{if(str-length($type) > 0, ":#{$type}", "")}");
+            $class-name: hu-class-name("#{$class-name-property}#{if(str-length("#{$type}") > 0, ":#{$type}", "")}");
             $value: if($value, $value, $type);
 
             @include hu-pseudo-responsive($class-name, $pseudos, $modules, $mq-scale) {
