change group syntax to put the conditon on the group class, not the child

--- a/src/mixins/_hu-pseudo-responsive.scss
+++ b/src/mixins/_hu-pseudo-responsive.scss
@@ -37,14 +37,14 @@
       }
 
       @if (index($modules, group-hover)) {
-        .group:hover .group__#{hu-escape-class-name("@mq-#{$mq-scale}:hover")}--#{$class-name}#{$pseudo} {
+        .group:hover .group#{hu-escape-class-name(":hover")}__#{hu-escape-class-name("@mq-#{$mq-scale}")}--#{$class-name}#{$pseudo} {
           @content;
         }
       }
 
       @if (index($modules, group-state)) {
         @each $state in $hu-states {
-          .group.#{$state} .group__#{hu-escape-class-name("@mq-#{$mq-scale}")}-#{$state}#{$pseudo-class-name}--#{$class-name}#{$pseudo} {
+          .group.#{$state} .group-#{$state}__#{hu-escape-class-name("@mq-#{$mq-scale}")}#{$pseudo-class-name}--#{$class-name}#{$pseudo} {
             @content;
           }
         }
