--- a/src/mixins/_hu-generic.scss
+++ b/src/mixins/_hu-generic.scss
@@ -36,14 +36,14 @@
     }
 
     @else if ($module == group-hover) {
-      .group:hover .group__#{hu-escape-class-name(":hover")}--#{$class-name} {
+      .group:hover .group#{hu-escape-class-name(":hover")}__#{$class-name} {
         @content;
       }
     }
 
     @else if ($module == group-state) {
       @each $state in $hu-states {
-        .group.#{$state} .group__#{$state}--#{$class-name} {
+        .group.#{$state} .group-#{$state}__#{$class-name} {
           @content;
         }
       }
