--- a/src/variables/classes/_hu-display.scss
+++ b/src/variables/classes/_hu-display.scss
@@ -1,6 +1,6 @@
 $hu-display-alias: "" !default;
 
-$hu-display-modules: (base, focus, hover, hocus, group-hover, group-state, print, responsive, state) !default;
+$hu-display-modules: (base, focus, hover, hocus, group-hocus, group-state, print, responsive, state) !default;
 
 $hu-display-types: (
   block,
