--- a/src/variables/classes/_hu-transition-property.scss
+++ b/src/variables/classes/_hu-transition-property.scss
@@ -1,6 +1,6 @@
 $hu-transition-property-alias: "" !default;
 
-$hu-transition-property-modules: (base, group-hover, group-state, reduced-motion, state) !default;
+$hu-transition-property-modules: (base, group-hocus, group-state, reduced-motion, state) !default;
 
 $hu-transition-property-types: (
   all,
