--- a/src/variables/classes/_hu-visibility.scss
+++ b/src/variables/classes/_hu-visibility.scss
@@ -1,6 +1,6 @@
 $hu-visibility-alias: "" !default;
 
-$hu-visibility-modules: (base, hocus, group-hover, group-state, print, responsive, state) !default;
+$hu-visibility-modules: (base, hocus, group-hocus, group-state, print, responsive, state) !default;
 
 $hu-visibility-types: (
   hidden,
