--- a/src/variables/classes/_hu-z-index.scss
+++ b/src/variables/classes/_hu-z-index.scss
@@ -1,6 +1,6 @@
 $hu-z-index-alias: "" !default;
 
-$hu-z-index-modules: (base, hocus, group-hover, group-state, state) !default;
+$hu-z-index-modules: (base, hocus, group-hocus, group-state, state) !default;
 
 $hu-z-index-types: (
   auto,
