--- a/src/mixins/_hu-generic.scss
+++ b/src/mixins/_hu-generic.scss
@@ -35,8 +35,21 @@
       }
     }
 
+    @else if ($module == group-focus) {
+      #{$hu-focus-parent} .group#{$hu-focus-pseudo} .group#{hu-escape-class-name(":focus")}__#{$class-name} {
+        @content;
+      }
+    }
+
     @else if ($module == group-hover) {
       .group:hover .group#{hu-escape-class-name(":hover")}__#{$class-name} {
+        @content;
+      }
+    }
+
+    @else if ($module == group-hocus) {
+      #{$hu-focus-parent} .group#{$hu-focus-pseudo} .group#{hu-escape-class-name(":hocus")}__#{$class-name},
+      .group:hover .group#{hu-escape-class-name(":hocus")}__#{$class-name} {
         @content;
       }
     }
