--- a/src/variables/classes/_hu-opacity.scss
+++ b/src/variables/classes/_hu-opacity.scss
@@ -1,6 +1,6 @@
 $hu-opacity-alias: "" !default;
 
-$hu-opacity-modules: (base, focus, hover, hocus, group-hover, group-state, state) !default;
+$hu-opacity-modules: (base, focus, hover, hocus, group-hocus, group-state, state) !default;
 
 $hu-opacity-types: (
   0: 0,
