--- a/src/variables/classes/_hu-svg-fill-color.scss
+++ b/src/variables/classes/_hu-svg-fill-color.scss
@@ -1,5 +1,5 @@
 $hu-svg-fill-color-alias: svg-fill-color !default;
 
-$hu-svg-fill-color-modules: (base, group-hover) !default;
+$hu-svg-fill-color-modules: (base, group-hocus) !default;
 
 $hu-svg-fill-color-types: map-merge((current: (current: currentColor)), $hu-colors) !default;
