--- a/src/variables/classes/_hu-transition-easing.scss
+++ b/src/variables/classes/_hu-transition-easing.scss
@@ -1,5 +1,5 @@
 $hu-transition-easing-alias: transition-easing !default;
 
-$hu-transition-easing-modules: (base, group-hover, group-state, reduced-motion, state) !default;
+$hu-transition-easing-modules: (base, group-hocus, group-state, reduced-motion, state) !default;
 
 $hu-transition-easing-types: $hu-animation-easing-types !default;
