transition classes inherit from -transition-modules

--- a/src/variables/classes/_hu-transition.scss
+++ b/src/variables/classes/_hu-transition.scss
@@ -1,5 +1,5 @@
 $hu-transition-alias: "" !default;
 
-$hu-transition-modules: () !default;
+$hu-transition-modules: (base, group-hocus, group-state, reduced-motion, state) !default;
 
 $hu-transition-types: () !default;
