--- a/src/variables/classes/_hu-transition-duration.scss
+++ b/src/variables/classes/_hu-transition-duration.scss
@@ -1,6 +1,6 @@
 $hu-transition-duration-alias: "" !default;
 
-$hu-transition-duration-modules: (base, group-hocus, group-state, reduced-motion, state) !default;
+$hu-transition-duration-modules: $hu-transition-modules !default;
 
 $hu-transition-duration-types: (
   0: 0s,
