Set -reset-img-responsive: false. Fixes #8

--- a/src/variables/reset/_index.scss
+++ b/src/variables/reset/_index.scss
@@ -6,7 +6,7 @@ $hu-reset-html-font-family: null !default;
 $hu-reset-html-font-size: $hu-f-rem-context !default;
 $hu-reset-html-font-smoothing: true !default;
 $hu-reset-html-overflow-y: null !default;
-$hu-reset-img-responsive: true !default;
+$hu-reset-img-responsive: false !default;
 $hu-reset-input-placeholder-color: #767676 !default;
 $hu-reset-remove-number-input-spinners: true !default;
 $hu-reset-text-input-appearance: textfield !default;
