--- a/src/variables/reset/_index.scss
+++ b/src/variables/reset/_index.scss
@@ -2,7 +2,7 @@ $hu-reset: true !default;
 $hu-reset-box-sizing: border-box !default;
 $hu-reset-html-background-color: #fff !default;
 $hu-reset-html-color: null !default;
-$hu-reset-html-font-family: null !default;
+$hu-reset-html-font-family: sans-serif !default;
 $hu-reset-html-font-size: $hu-f-rem-context !default;
 $hu-reset-html-font-smoothing: true !default;
 $hu-reset-html-overflow-y: null !default;
