add grid-auto-flow default types

--- a/src/variables/classes/_hu-grid-auto-flow.scss
+++ b/src/variables/classes/_hu-grid-auto-flow.scss
@@ -2,4 +2,8 @@ $hu-grid-auto-flow-alias: "" !default;
 
 $hu-grid-auto-flow-modules: () !default;
 
-$hu-grid-auto-flow-types: () !default;
+$hu-grid-auto-flow-types: (
+  column,
+  dense,
+  row,
+) !default;
