add justify-self placeholder

--- a/src/variables/classes/_index.scss
+++ b/src/variables/classes/_index.scss
@@ -65,6 +65,7 @@
 @import "hu-height";
 @import "hu-justify-content";
 @import "hu-justify-items";
+@import "hu-justify-self";
 @import "hu-letter-spacing";
 @import "hu-line-height";
 @import "hu-list-style";
