add object-fit placeholder class

--- a/src/variables/classes/_index.scss
+++ b/src/variables/classes/_index.scss
@@ -75,6 +75,7 @@
 @import "hu-min-height";
 @import "hu-min-width";
 @import "hu-momentum-scrolling";
+@import "hu-object-fit";
 @import "hu-opacity";
 @import "hu-order";
 @import "hu-outline";
