--- a/src/classes/_index.scss
+++ b/src/classes/_index.scss
@@ -73,6 +73,7 @@
 @import "hu-max-width";
 @import "hu-min-height";
 @import "hu-min-width";
+@import "hu-object-fit";
 @import "hu-opacity";
 @import "hu-order";
 @import "hu-outline";
